--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
     "mysql2": "^3.6.1",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
+    "sanitize": "^2.1.2",
     "sequelize": "^6.33.0",
-    "sequelize-cli": "^6.6.1"
+    "sequelize-cli": "^6.6.1",
+    "xss-clean": "^0.1.4"
   }
 }
